Fix record action visibility when showOnHover is true and it is not in a grid

--- a/desktop/cmp/record/RecordActionBar.scss
+++ b/desktop/cmp/record/RecordActionBar.scss
@@ -11,7 +11,7 @@
   &.xh-show-on-hover {
     &:hover {
       .xh-record-action-button {
-        visibility: hidden;
+        visibility: visible;
       }
     }
 
